# mini-db

./: Cargo.toml  README.md  bitcask.excalidraw  config.toml  mini-db-design.excalidraw  parser-design.excalidraw  planner.excalidraw  sql分析.excalidraw
db/: 675727359390497170  675727370347704429  675727592794104102_active  696392295149515530_active  puid-0-0_active  puid-0-0_old
docs/: architecture.md  technical-design.md  technical-implementation.md
src/: config.toml  db_error.rs  lib.rs  main.rs
src/cfg/: config.rs  mod.rs  watcher.rs
src/config/: config.rs  mod.rs  watcher.rs
src/sql/: mod.rs
src/sql/execution/: catalog.rs  executor.rs  expr.rs  mod.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/sql/planner/: mod.rs  plan.rs  planner.rs
src/storage/: bitcask.rs  engine.rs  memory.rs  mod.rs  mvcc.rs
src/types/: expression.rs  mod.rs  schema.rs  value.rs
src/utils/: bin_encoder.rs  encode.rs  format.rs  key_coder.rs  key_encoder.rs  mod.rs  timestamp.rs
src/utils/serde_utils/: bin_coder.rs  key_coder.rs  mod.rs
tests/: integration_test.rs
