[package]
name = "mini-db"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
fs4 = "0.13.1"
hex = "0.4.3"
lazy_static = "1.5.0"
notify = "8.1.0"
serde = { version = "1.0.217", features = ["derive"] }
sha3 = "0.10.8"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
toml = "0.9.2"
tsid = "0.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.4"
serde_bytes = "0.11.17"
bincode = { version = "2.0.1", features = ["serde"] }
itertools = "0.14.0"
